--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,6 +101,16 @@ img {
   }
 }
 
+.button {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 2rem;
+  background-color: var(--green-color);
+  font-size: 15px;
+  font-weight: var(--font-semibold);
+  color: var(--white-color);
+}
+
 .container {
   max-width: 1120px;
   width: calc(100% - 3rem);
@@ -109,4 +119,95 @@ img {
 
 .main {
   overflow: hidden;
+}
+
+// ===== HEADER SECTION =====
+.header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--home-color);
+  z-index: var(--z-fixed);
+  transition: var(--transition-300);
+
+  &__container {
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__logo {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    font-family: var(--font-title);
+    font-size: 24px;
+    font-weight: var(--font-semibold);
+    color: var(--first-color);
+
+    &-icon {
+      width: 1.5rem;
+    }
+  }
+
+  &__menu {
+    @media screen and (max-width: 767px) {
+      position: fixed;
+      width: 80%;
+      top: 7rem;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      text-align: center;
+      padding: 2rem;
+      background-color: var(--white-color);
+      box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
+      transition: var(--transition-300);
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: top;
+    }
+
+    // show menu
+    &.show-menu {
+      opacity: 1;
+      transform: scaleY(1);
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  &__link {
+    font-size: 15px;
+    color: var(--first-color);
+
+    &:hover {
+      color: var(--green-color);
+    }
+  }
+
+  &__button {
+    margin-top: var(--margin-1-5);
+  }
+
+  &__toggle {
+    display: inline-flex;
+    font-size: 1.5rem;
+    color: var(--first-color);
+    cursor: pointer;
+  }
+
+  &__theme {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
 }
