--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,6 +40,9 @@
 
   // transition
   --transition-300: 0.3s;
+
+  // line-height
+  --leading-text: 180%;
 }
 
 // ===== RESET & BASE =====
@@ -68,9 +71,7 @@ input,
 button {
   font-family: var(--font-text);
   font-weight: var(--font-semibold);
-  padding: 0;
-  background: transparent;
-  bottom: none;
+  border: none;
   outline: none;
 }
 
@@ -85,15 +86,16 @@ img {
 
   &-title {
     font-family: var(--font-title);
-    font-size: 28px;
-    font-weight: var(--font-semibold);
+    font-size: 36px;
+    font-weight: var(--font-reguler);
     color: var(--first-color);
-    margin-bottom: var(--margin-2);
+    margin-bottom: var(--margin-1);
   }
 
   &-text {
     font-size: 15px;
     color: var(--first-color);
+    line-height: var(--leading-text);
   }
 
   &-bottom {
@@ -104,6 +106,7 @@ img {
 .button {
   display: flex;
   justify-content: center;
+  height: 55px;
   padding: 1rem 2rem;
   background-color: var(--green-color);
   font-size: 15px;
@@ -209,5 +212,47 @@ img {
     right: 1.5rem;
     font-size: 1.5rem;
     cursor: pointer;
+  }
+}
+
+// ===== HOME SECTION =====
+.home {
+  background-color: var(--home-color);
+
+  &__container {
+    display: grid;
+    gap: 3rem;
+  }
+
+  &__data,
+  &__img {
+    text-align: center;
+    justify-self: center;
+  }
+
+  &__form {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    gap: 1rem;
+    background-color: var(--white-color);
+  }
+
+  &__input {
+    width: 100%;
+    height: 55px;
+    padding-left: 8px;
+    background: transparent;
+    font-size: 15px;
+    font-weight: var(--font-reguler);
+    color: var(--first-color);
+
+    &::placeholder {
+      font-family: var(--font-text);
+      font-size: 15px;
+      font-weight: var(--font-reguler);
+      color: var(--second-color);
+    }
   }
 }
