--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,6 +134,11 @@ img {
   z-index: var(--z-fixed);
   transition: var(--transition-300);
 
+  // sticky header
+  &.sticky-action {
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  }
+
   &__container {
     height: var(--header-height);
     display: flex;
