--- a/scss/style.scss
+++ b/scss/style.scss
@@ -281,3 +281,18 @@ img {
     }
   }
 }
+
+// width 640px
+@media screen and (min-width: 640px) {
+  .home {
+    &__text,
+    &__form,
+    &__img {
+      width: 450px;
+    }
+
+    &__title {
+      font-size: 42px;
+    }
+  }
+}
